--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href=/recipes/lasagna.html>Lasagna</a></li>
-        <li><a href=/recipes/milanesa.html>Milanesa</a></li>
-        <li><a href=/recipes/empanadas.html>Empanadas</a></li>
+        <li><a href=recipes/lasagna.html>Lasagna</a></li>
+        <li><a href=recipes/milanesa.html>Milanesa</a></li>
+        <li><a href=recipes/empanadas.html>Empanadas</a></li>
     </ul>
 </body>
 </html>
