--- a/recipes/empanadas.html
+++ b/recipes/empanadas.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Empanadas</h1>
-    <img src="/images/empanadas.jpeg" alt="Empanadas">
+    <img src="../images/empanadas.jpeg" alt="Empanadas">
     <h2>Description</h2>
     <p>Cómo hacer empanadas tucumanas. Preparar la receta de empanada que hoy os traigo, me ha hecho especial ilusión. Os hablo de las tradicionales empanadas tucumanas, propias de la provincia argentina de Tucuman.
 
