--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img src="/images/lasagna.jpeg" alt="Una lasaÑa">
+    <img src="../images/lasagna.jpeg" alt="Una lasaÑa">
     <h2>Description</h2>
     <p>Una lasaña es comida italiana, que se escribe realmente con GN, pero como la gente del chat de twitch son unos pesados (POSONU), aca la escribi con Ñ de Ñiqui Ñiqui</p>
     <h1>Ingredientes</h1>
