--- a/recipes/milanesa.html
+++ b/recipes/milanesa.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Milanesa Napolitana</h1>
-    <img src="images/milanesa.webp" alt="Milanesa napolitana">
+    <img src="../images/milanesa.webp" alt="Milanesa napolitana">
     <h2>Description</h2>
     <p>Milanesa napolitana is a variation on the breaded fried steak called milanesa that is popular in Argentina and
         Uruguay. Milanesa a la Napolitana does not originate from Milan or Naples; it's thought to have been invented in
